--- a/templates/seeker/job_details.html
+++ b/templates/seeker/job_details.html
@@ -88,6 +88,7 @@
         <p><strong>Salary:</strong> {{ details.salary }}</p>
 
         <p><strong>Description:</strong> {{ details.description }}</p>
+          <p><strong>Description:</strong> {{ details.experience }}</p>
       <p><strong>Requirments:</strong> {{ details.requirements }}</p>
       <p><strong>Deadline:</strong> {{ details.application_deadline }}</p>
 
