--- a/templates/seeker/jobs.html
+++ b/templates/seeker/jobs.html
@@ -90,6 +90,7 @@
         </p>
           <hr>
     <a href="{% url 'job_details' job.id %}" class="apply-btn">View Details</a>
+            <a href="{% url 'apply_job' job.id %}" class="apply-btn">Apply</a>
 
 
 
