--- a/templates/recruiter/applicant_profile.html
+++ b/templates/recruiter/applicant_profile.html
@@ -1,49 +1,48 @@
-{% extends "seeker/seeker.html" %}
-
+{% extends "recruiter/recruiter.html" %}
 
 {% block content %}
 <div class="container mt-4">
 
-    <h2 class="mb-3">My Profile</h2>
-    <a href="{% url 'profile' %}" class="btn btn-primary mb-3">Edit Profile</a>
+    <h2 class="mb-3">Applicant Profile</h2>
+
+    <a href="javascript:history.back()" class="btn btn-secondary mb-3">← Back</a>
 
     <div class="card p-4 shadow">
 
         <!-- BASIC DETAILS -->
         <h4 style="color: black; font-size: 22px; display: block;">Basic Information</h4>
 
-       <p><strong>Name:</strong> {{ profile.user.name }}</p>
-<p><strong>Age:</strong> {{ profile.user.age }}</p>
-<p><strong>Email:</strong> {{ profile.user.email }}</p>
-<p><strong>Phone:</strong> {{ profile.user.phone }}</p>
- <hr>
+        <p><strong>Name:</strong> {{ seeker.name }}</p>
+        <p><strong>Age:</strong> {{ seeker.age }}</p>
+        <p><strong>Email:</strong> {{ seeker.email }}</p>
+        <p><strong>Phone:</strong> {{ seeker.phone }}</p>
+    <hr>
         <!-- SKILLS -->
         <h4 class="mt-4" style="color: black; font-size: 22px; display: block;">Skills</h4>
 
         <p>{{ profile.skills|linebreaks }}</p>
- <hr>
+    <hr>
         <!-- PROJECTS -->
         <h4 class="mt-4" style="color: black; font-size: 22px; display: block;">Projects</h4>
 
         <p>{{ profile.projects|linebreaks }}</p>
- <hr>
+    <hr>
         <!-- EXPERIENCE -->
         <h4 class="mt-4" style="color: black; font-size: 22px; display: block;">Experience</h4>
 
         <p>{{ profile.experience|linebreaks }}</p>
- <hr>
+    <hr>
         <!-- RESUME -->
         <h4 class="mt-4" style="color: black; font-size: 22px; display: block;">Resume</h4>
 
         {% if profile.resume %}
-            <a href="{{ profile.resume.url }}" class="btn btn-secondary" >Download Resume</a>
+            <a href="{{ profile.resume.url }}" class="btn btn-success" download>Download Resume</a>
         {% else %}
             <p>No resume uploaded.</p>
         {% endif %}
- <hr>
-
+    <hr>
         <!-- EDUCATION -->
-        <h4 class="mt-4" style="color: black; font-size: 22px; display: block;">Education</h4>
+        <h4 class="mt-4"style="color: black; font-size: 22px; display: block;">Education</h4>
 
 
         <h5>10th Grade</h5>
@@ -52,28 +51,26 @@
         <p><strong>Year:</strong> {{ profile.tenth_year }}</p>
         <p><strong>Percentage:</strong> {{ profile.tenth_percentage }}</p>
 
-        <h5 class="mt-3" style="color: black; font-size: 22px; display: block;">12th Grade</h5><br>
+        <h5 class="mt-3" style="color: black; font-size: 22px; display: block;">12th Grade</h5>
         <p><strong>School:</strong> {{ profile.twelfth_school }}</p>
         <p><strong>Board:</strong> {{ profile.twelfth_board }}</p>
         <p><strong>Year:</strong> {{ profile.twelfth_year }}</p>
         <p><strong>Percentage:</strong> {{ profile.twelfth_percentage }}</p>
 
-        <h5 class="mt-3" style="color: black; font-size: 22px; display: block;">Bachelor's Degree</h5><br>
-
+        <h5 class="mt-3" style="color: black; font-size: 22px; display: block;">Bachelor's Degree</h5>
         <p><strong>Specialization:</strong> {{ profile.bachelors_specialization }}</p>
         <p><strong>Institute:</strong> {{ profile.bachelors_institute }}</p>
         <p><strong>Year:</strong> {{ profile.bachelors_year }}</p>
         <p><strong>CGPA:</strong> {{ profile.bachelors_cgpa }}</p>
 
-        <h5 class="mt-3">Master's Degree</h5><br>
+        <h5 class="mt-3" style="color: black; font-size: 22px; display: block;">Master's Degree</h5>
         <p><strong>Specialization:</strong> {{ profile.masters_specialization }}</p>
         <p><strong>Institute:</strong> {{ profile.masters_institute }}</p>
         <p><strong>Year:</strong> {{ profile.masters_year }}</p>
         <p><strong>CGPA:</strong> {{ profile.masters_cgpa }}</p>
-
- <hr>
-        <!-- SOCIAL LINKS -->
-        <h4 class="mt-4">Social Profiles</h4>
+<hr>
+        <!-- SOCIAL -->
+        <h4 class="mt-4" style="color: black; font-size: 22px; display: block;">Social Profiles</h4>
 
         {% if profile.linkedin %}
             <p><strong>LinkedIn:</strong> <a href="{{ profile.linkedin }}" target="_blank">{{ profile.linkedin }}</a></p>
