--- a/templates/recruiter/applied_seeker.html
+++ b/templates/recruiter/applied_seeker.html
@@ -5,15 +5,18 @@
 
 <table class="table text-start align-middle table-bordered table-hover mb-0">
      <tr>
+         <th>Sl.No</th>
             <th>Name</th>
             <th>Email</th>
             <th>Job Title</th>
             <th>Profile</th>
+          <th>Shortlist/Reject</th>
 
         </tr>
 
 {% for app in applications %}
 <tr>
+    <td>{{ forloop.counter }}</td>
     <td>{{ app.seeker.name }}</td>
     <td>{{ app.seeker.email }}</td>
     <td>{{ app.job.title }}</td>
@@ -23,6 +26,16 @@
     View Profile
 </a>
     </td>
+    <td>
+    <a href="{% url 'shortlist' app.id %}" class="btn btn-success btn-sm">
+        Shortlist
+    </a>
+
+    <a href="{% url 'reject' app.id %}" class="btn btn-danger btn-sm">
+        Reject
+    </a>
+</td>
+
 
 
 </tr>
