--- a/templates/admin/job_details.html
+++ b/templates/admin/job_details.html
@@ -1,6 +1,6 @@
 
 
-{% extends 'seeker/seeker.html' %}
+{% extends 'admin/admin.html' %}
 
 {% block content %}
 <style>
@@ -97,8 +97,6 @@
     <div class="buttons">
         <a href="javascript:history.back()" class="btn back-btn">Return</a>
 
-
-    <a href="{% url 'apply_job' details.id %}" class="btn apply-btn">Apply</a>
 
 
     </div>
