--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
 					Account Login
 				</span>
 	{% for message in messages %}
-         <div class="alert alert-primary alert-dismissible fade show" role="alert">
+         <div class="alert alert-primary alert-dismissible fade show" role="alert" style="color='white">
         {{message}}
          </div>
 						{% endfor %}
