--- a/templates/recruiter/applied_seeker.html
+++ b/templates/recruiter/applied_seeker.html
@@ -22,7 +22,7 @@
     <td>{{ app.job.title }}</td>
     <td>
 
-    <a href="{% url 'app_profile' app.seeker.id %}" class="btn btn-info btn-sm">
+    <a href="{% url 'app_profile' app.seeker.id %}" class="btn btn btn-sm btn-primary">
     View Profile
 </a>
     </td>
