--- a/templates/admin/seeker_view.html
+++ b/templates/admin/seeker_view.html
@@ -1,5 +1,13 @@
 {% extends 'admin/admin.html' %}
+
+{% block search %}
+<form class="d-none d-md-flex ms-4">
+     {{ seekerFilter.form }}
+</form>
+{% endblock search %}
 {% block content %}
+
+
 
 <table class="table text-start align-middle table-bordered table-hover mb-0">
   <thead>
